Quick add splide visibility fixed, some pdp slider styles fixed.

--- a/assets/section-quick-add.css
+++ b/assets/section-quick-add.css
@@ -83,9 +83,7 @@ quick-add-modal .product:not(.featured-product) .product__view-details {
   display: block;
 }
 
-quick-add-modal .quick-add-hidden,
-quick-add-modal .product__modal-opener:not(.product__modal-opener--image),
-quick-add-modal .product__media-item:not(:first-child) {
+quick-add-modal .quick-add-hidden {
   display: none !important;
 }
 
